# superLLM

./: .env.example  .gitignore  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTERS.md
examples/: api_test.py  quickstart.sh
scripts/: install.sh  setup.sh
superllm/: __init__.py  __main__.py
superllm/agents/: __init__.py  base.py  tools.py
superllm/cli/: app.py  auth.py  config.py  hub.py  model.py  open.py  provider.py  run.py  serve.py  system.py
superllm/config/: settings.py
superllm/hub/: hf_client.py
superllm/inference/: __init__.py  audio.py  base.py  cloud.py  local.py  ollama.py  openclaw.py  opencode.py  router.py  smart_router.py
superllm/models/: __init__.py  library.py  registry.py
superllm/providers/: __init__.py  base.py  registry.py
superllm/server/: __init__.py  app.py
superllm/server/middleware/: auth.py
superllm/server/routes/: agents.py  audio.py  chat.py  config.py  conversations.py  embeddings.py  health.py  models.py  providers.py
superllm/storage/: __init__.py  db.py  models.py
superllm/ui/: server.py
tests/: test_api_models.py  test_inference_base.py  test_model_library.py  test_registry.py  test_routing_strategy.py  test_settings.py  test_smart_router.py  test_storage_models.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx
ui/src/components/: ChatInput.tsx  ChatMessage.tsx  ModelCard.tsx  Sidebar.tsx
ui/src/hooks/: useThemeStore.ts
ui/src/lib/: api.ts
ui/src/pages/: ChatPage.tsx  LibraryPage.tsx  ModelDetailPage.tsx  ModelsPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  StatusPage.tsx
ui/src/styles/: globals.css
