[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superllm"
version = "0.1.0"
description = "Local-first and cloud-capable AI platform. Run, manage, and serve models locally or in the cloud."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

authors = [
    {name = "superLLM Team"},
]

dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
]
cloud = [
    "litellm>=1.40.0",
]
audio = [
    "openai-whisper>=20240930",
    "faster-whisper>=1.0.0",
]
tts = [
    "bark>=0.1.5",
    "TTS>=0.22.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
agents = [
    "aiofiles>=24.0.0",
]
all-local = [
    "superllm[local,audio,tts,embeddings,agents]",
]
all-cloud = [
    "superllm[cloud]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
]
all = [
    "superllm[local,cloud,audio,tts,embeddings,agents,dev]",
]

[project.urls]
homepage = "https://github.com/superllm/superllm"
repository = "https://github.com/superllm/superllm"
documentation = "https://superllm.dev"

[project.scripts]
superllm = "superllm.cli.app:app"
superllm-server = "superllm.server.app:run"
supercode = "superllm.cli.app:app"

[tool.hatch.build]
include = ["superllm/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
